# aweshelf

./: .gitignore  README.ai.md  README.md  README_cn.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/article_media/0529/: aweshelf-bookmark-your-ai-coding-sessions.md  translation.md
docs/article_media/0530/: aweshelf-bookmark-your-ai-coding-sessions.md  translation.md
docs/article_media/0530/aweshelf-bookmark-your-ai-coding-sessions-zh-CN/: translation.md
docs/superpowers/specs/: 2026-05-25-aweshelf-design.md
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: aweshelfService.ts  bookmark.ts  bookmarkDetail.ts  bookmarkTreeProvider.ts  extension.ts
extensions/vscode/test/: aweshelfService.test.ts  bookmark.test.ts  bookmarkDetail.test.ts
logo/: shelf&switch.md
resources/skills/aweshelf/: SKILL.md
src/aweshelf/: __init__.py  cli.py  types.py
src/aweshelf/commands/: bookmark.py  browse.py  list.py  profiles.py  resume.py  sessions.py  show.py
src/aweshelf/lib/: aweswitch.py  discovery.py  resume.py  resume_target.py  session.py  store.py
src/aweshelf/tui/: app.py
tests/: test_aweswitch.py  test_browse.py  test_cli.py  test_resume.py  test_session.py  test_store.py
